# password-manager

./: .gitignore  CMakeLists.txt  README.md  install.sh
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  CODING_STANDARDS.md  VAULT_FORMAT_SPEC.md
docs/UML/: DIAGRAMS.md
include/vaultc/: crypto.h  db.h  importer.h  pwgen.h  session.h  sync.h  types.h  utils.h  vault.h
packaging/: com.vaultc.app.desktop  com.vaultc.app.xml
scaffold/: CMakeLists.txt
scaffold/include/vaultc/: types.h
scaffold/tests/: harness.h
src/: CMakeLists.txt  main.c
src/app/: session.c
src/core/: crypto.c  db.c  errors.c  vault.c
src/generator/: pwgen.c
src/import/: import_bitwarden.c  import_firefox.c  import_generic.c  import_google.c  import_helpers.h  import_ios.c  importer.c
src/sync/: sync_r2.c
src/ui/: ui_app.c  ui_entry_dialog.c  ui_generator_dialog.c  ui_import_dialog.c  ui_internal.h  ui_main_window.c  ui_settings_dialog.c  ui_unlock_dialog.c
src/utils/: clipboard.c  csv_parser.c  totp.c  uuid.c
tests/: CMakeLists.txt  debug_sync.c  harness.h  test_crypto.c  test_db.c  test_import.c  test_integration.c  test_pwgen.c  test_sync.c  test_vault.c
tests/fixtures/: bitwarden_sample.csv  firefox_sample.csv  google_sample.csv  ios_sample.csv
